test/expected/explain_o_delete_i_v.out
explain void operator delete(int)
                             ^
30: error: invalid operator "delete" parameter type "int"; must be a pointer to void, class, struct, or union
